# Financial-Analytics-App

./: .gitignore  README.md  note.txt
backend/: app.py  pyproject.toml  requirements.txt
backend/chatbot/: chatbot_engine.py
backend/data_processing/: process_csv.py
backend/routes/: upload_routes.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: CSVGuide.jsx  ChartComponent.jsx  ChatBotComponent.jsx  HomeSection.jsx  LoadingSpinner.jsx  UploadForm.jsx  VisualizationSection.jsx
frontend/src/pages/: LandingPage.jsx
