[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["AtharvMishra10 <atharv.mishra@tifin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-cors = "^5.0.1"
pandas = "^2.2.3"
openai = "^1.76.0"
langchain = "^0.3.24"
python-dotenv = "^1.1.0"
langchain-community = "^0.3.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
